homework-11 - upload avatar to S3 Bucket
